--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
-  "name": "nodetest1",
-  "version": "0.0.0",
+  "name": "lembrador-contas",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "atob": "^2.0.3",
     "body-parser": "~1.17.1",
+    "bootstrap": "^4.0.0-alpha.6",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "google-auth-library": "^0.10.0",
+    "googleapis": "^20.1.0",
+    "jquery": "^3.2.1",
     "mongodb": "^2.2.31",
     "mongoose": "^4.11.6",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "nodemon": "^1.11.0",
+    "pdf2json": "^1.1.7",
+    "serve-favicon": "~2.4.2",
+    "tether": "^1.4.0"
   }
 }
