--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "atob": "^2.0.3",
     "body-parser": "~1.17.1",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "^4.0.0-beta",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
@@ -21,7 +21,7 @@
     "morgan": "~1.8.1",
     "nodemon": "^1.11.0",
     "pdf2json": "^1.1.7",
-    "serve-favicon": "~2.4.2",
-    "tether": "^1.4.0"
+    "popper.js": "1.11.0",
+    "serve-favicon": "~2.4.2"
   }
 }
