--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "google-auth-library": "^0.10.0",
     "googleapis": "^20.1.0",
     "jquery": "^3.2.1",
+    "jquery-mask-plugin": "^1.14.11",
     "mongodb": "^2.2.31",
     "mongoose": "^4.11.6",
     "morgan": "~1.8.1",
