--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "startm": "nodemon --inspect=192.168.1.150:9229 ./bin/www",
-    "start": "node --inspect=192.168.1.150:9229 ./bin/www"
+    "startm": "nodemon ./bin/www",
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "atob": "^2.0.3",
@@ -14,16 +14,18 @@
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
-    "google-auth-library": "^0.10.0",
-    "googleapis": "^20.1.0",
+    "google-auth-library": "^6.1.4",
+    "googleapis": "^67.0.0",
     "jquery": "^3.2.1",
     "jquery-mask-plugin": "^1.14.11",
-    "mongodb": "^2.2.31",
-    "mongoose": "^4.11.6",
-    "morgan": "~1.8.1",
-    "nodemon": "^1.11.0",
+    "mongodb": "^3.6.3",
+    "mongoose": "^5.11.11",
+    "morgan": "^1.10.0",
     "pdf2json": "^1.1.7",
     "popper.js": "1.11.0",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
