--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "morgan": "^1.10.0",
     "pdf2json": "^1.1.7",
     "popper.js": "1.11.0",
+    "safe-eval": "^0.4.1",
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
