--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.5",
     "atob": "^2.0.3",
-    "body-parser": "~1.17.1",
-    "bootstrap": "^4.0.0-beta",
+    "body-parser": "^1.20.0",
+    "bootstrap": "4.6.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
-    "ejs": "~2.5.6",
-    "express": "~4.15.2",
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
     "google-auth-library": "^6.1.4",
     "googleapis": "^67.0.0",
     "jquery": "^3.2.1",
@@ -21,9 +22,9 @@
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.11",
     "morgan": "^1.10.0",
-    "pdf2json": "^1.1.7",
-    "popper.js": "1.11.0",
-    "serve-favicon": "~2.4.2"
+    "pdf2json": "^2.0.1",
+    "serve-favicon": "~2.4.2",
+    "yarn": "^1.22.18"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
