--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,14 +11,19 @@ services:
 #      - /var/run/docker.sock:/var/run/docker.sock
 #      - ./volumes/portainer/data:/data
 
+  mongodb:
+    image: mongo:latest
+    ports:
+      - 27017:27017
+
   lembrador-contas:
     container_name: lembrador-contas
     image: node:18
-    command: bash -c 'npm install && npm run startm'
+    command: bash -c 'yarn install && npm run startm'
     working_dir: /root/lembrador-contas
     restart: unless-stopped
     ports:
-      - 3000:3000
+      - 9090:9090
     volumes:
       - ./volumes/lembrador-contas:/root/lembrador-contas
     logging:
