--- a/volumes/lembrador-contas/package.json
+++ b/volumes/lembrador-contas/package.json
@@ -7,7 +7,6 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.5",
     "atob": "^2.0.3",
     "body-parser": "^1.20.0",
     "bootstrap": "4.6.1",
@@ -16,17 +15,17 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "google-auth-library": "^6.1.4",
-    "googleapis": "^67.0.0",
+    "googleapis": "^100.0.0",
     "jquery": "^3.2.1",
     "jquery-mask-plugin": "^1.14.11",
-    "mongodb": "^3.6.3",
-    "mongoose": "^5.11.11",
+    "mongoose": "^6.3.4",
     "morgan": "^1.10.0",
     "pdf2json": "^2.0.1",
+    "popper.js": "^1.16.1",
     "serve-favicon": "~2.4.2",
     "yarn": "^1.22.18"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.16"
   }
 }
