Rede adicionada no docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,3 +33,8 @@ services:
         max-file: "3"
     stdin_open: true #docker run -i
     tty: true        #docker run -t
+
+networks:
+  default:
+    name: lembrador-contas_default
+    external: false
