--- a/volumes/lembrador-contas/package.json
+++ b/volumes/lembrador-contas/package.json
@@ -14,18 +14,19 @@
     "debug": "~2.6.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-rate-limit": "6.7.1",
     "google-auth-library": "^6.1.4",
     "googleapis": "^100.0.0",
     "jquery": "^3.2.1",
     "jquery-mask-plugin": "^1.14.11",
     "mongoose": "^6.3.4",
     "morgan": "^1.10.0",
-    "pdf2json": "^2.0.1",
+    "pdf2json": "3.0.4",
     "popper.js": "^1.16.1",
     "serve-favicon": "~2.4.2",
     "yarn": "^1.22.18"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "nodemon": "3.0.1"
   }
 }
