--- a/volumes/lembrador-contas/package.json
+++ b/volumes/lembrador-contas/package.json
@@ -15,8 +15,8 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-rate-limit": "6.7.1",
-    "google-auth-library": "^6.1.4",
-    "googleapis": "^100.0.0",
+    "google-auth-library": "8.9.0",
+    "googleapis": "122.0.0",
     "jquery": "^3.2.1",
     "jquery-mask-plugin": "^1.14.11",
     "mongoose": "^6.3.4",
@@ -24,7 +24,8 @@
     "pdf2json": "3.0.4",
     "popper.js": "^1.16.1",
     "serve-favicon": "~2.4.2",
-    "yarn": "^1.22.18"
+    "yarn": "^1.22.18",
+    "jsdom": "22.1.0"
   },
   "devDependencies": {
     "nodemon": "3.0.1"
