--- a/volumes/lembrador-contas/package.json
+++ b/volumes/lembrador-contas/package.json
@@ -17,15 +17,14 @@
     "express-rate-limit": "6.7.1",
     "google-auth-library": "8.9.0",
     "googleapis": "122.0.0",
-    "jquery": "^3.2.1",
-    "jquery-mask-plugin": "^1.14.16",
     "mongoose": "^6.3.4",
     "morgan": "^1.10.0",
     "pdf2json": "3.0.4",
     "popper.js": "^1.16.1",
     "serve-favicon": "~2.4.2",
     "yarn": "^1.22.18",
-    "jsdom": "22.1.0"
+    "jsdom": "22.1.0",
+    "moment": "2.29.4"
   },
   "devDependencies": {
     "nodemon": "3.0.1"
