--- a/volumes/lembrador-contas/package.json
+++ b/volumes/lembrador-contas/package.json
@@ -15,7 +15,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-rate-limit": "6.7.1",
-    "google-auth-library": "8.9.0",
+    "google-auth-library": "9.0.0",
     "googleapis": "122.0.0",
     "mongoose": "^6.3.4",
     "morgan": "^1.10.0",
@@ -24,7 +24,10 @@
     "serve-favicon": "~2.4.2",
     "yarn": "^1.22.18",
     "jsdom": "22.1.0",
-    "moment": "2.29.4"
+    "moment": "2.29.4",
+    "open": "8.4.2",
+    "url": "0.11.1",
+    "server-destroy": "1.0.1"
   },
   "devDependencies": {
     "nodemon": "3.0.1"
