--- a/volumes/lembrador-contas/package.json
+++ b/volumes/lembrador-contas/package.json
@@ -17,17 +17,18 @@
     "express-rate-limit": "6.7.1",
     "google-auth-library": "9.0.0",
     "googleapis": "122.0.0",
+    "jsdom": "22.1.0",
+    "moment": "2.29.4",
     "mongoose": "6.0.15",
     "morgan": "^1.10.0",
+    "open": "8.4.2",
     "pdf2json": "3.0.4",
     "popper.js": "^1.16.1",
     "serve-favicon": "~2.4.2",
-    "yarn": "^1.22.18",
-    "jsdom": "22.1.0",
-    "moment": "2.29.4",
-    "open": "8.4.2",
+    "server-destroy": "1.0.1",
     "url": "0.11.1",
-    "server-destroy": "1.0.1"
+    "web-push": "^3.6.4",
+    "yarn": "^1.22.18"
   },
   "devDependencies": {
     "nodemon": "3.0.1"
