--- a/docker-compose.amd64.yml
+++ b/docker-compose.amd64.yml
@@ -1,4 +1,3 @@
-version: '2'
 services:
 
 #  portainer:
@@ -12,6 +11,7 @@ services:
 #      - ./volumes/portainer/data:/data
 
   mongodb:
+    container_name: mongodb
     image: mongo:3.2
     ports:
       - 27017:27017
