--- a/volumes/lembrador-contas/package.json
+++ b/volumes/lembrador-contas/package.json
@@ -22,13 +22,14 @@
     "mongoose": "5.1.0",
     "morgan": "^1.10.0",
     "open": "8.4.2",
-    "pdf2json": "3.0.4",
+    "pdf2json": "3.1.2",
     "popper.js": "^1.16.1",
     "serve-favicon": "~2.4.2",
     "server-destroy": "1.0.1",
     "url": "0.11.1",
     "web-push": "^3.6.4",
-    "yarn": "^1.22.18"
+    "yarn": "^1.22.18",
+    "pdf-barcode": "1.2.3"
   },
   "devDependencies": {
     "nodemon": "3.0.1"
