--- a/.gitignore
+++ b/.gitignore
@@ -58,17 +58,14 @@ typings/
 # Output of 'npm pack'
 *.tgz
 
-# Yarn Integrity file
-.yarn-integrity
-
 # dotenv environment variables file
 .env
 
 # VS Code
 .vscode
 
-# Yarn
-yarn.lock
+# Bun
+bun.lock
 
 # NPM
 package-lock.json
