--- a/volumes/lembrador-contas/package.json
+++ b/volumes/lembrador-contas/package.json
@@ -1,10 +1,14 @@
 {
   "name": "lembrador-contas",
-  "version": "0.1",
+  "version": "0.2",
   "private": true,
+  "type": "module",
   "scripts": {
-    "startm": "nodemon ./src/bin/www",
-    "start": "node ./src/bin/www"
+    "dev": "bun run --watch /src/bin/www",
+    "start": "bun run /src/bin/www"
+  },
+   "engines": {
+    "bun": ">=1.1.0"
   },
   "dependencies": {
     "atob": "^2.0.3",
