fix: undo docker compose for arm32 migration as bun does not support this architecture

--- a/volumes/lembrador-contas/package.json
+++ b/volumes/lembrador-contas/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "bun run --watch /src/bin/www",
-    "start": "bun run /src/bin/www"
+    "start": "bun run /src/bin/www",
+    "node-startm": "nodemon ./src/bin/www",
+    "node-start": "node ./src/bin/www"
   },
    "engines": {
     "bun": ">=1.1.0"
